# prompt_genius_bundle

./: .gitignore  README.md  README_DEV.md  TODO.md  pyproject.toml
claude/: 01_catalog_audit_prompt.md  02_normalization_prompt.md  03_validator_prompt.md  04_migration_prompt.md  05_prompt_assembler_prompt.md  06_phase1_implementation.md
docs/: ARCHITECTURE.md  CATALOG_TAXONOMY.md  IMPLEMENTATION_NOTES.md  PRD.md  PROMPT_WORKFLOWS.md  RISKS_AND_METRICS.md  ROADMAP.md
packaging/: PromptGenius.spec  README.md  build_dmg.sh  build_help_book.py  build_mac_app.sh  dmg_settings.py  make_dmg_background.py  make_icon.sh  prepare_assets.sh
prompt_genius/: __init__.py
raw_corpus/: SOURCE.md  grok-imagine-prompts-20260529.csv  nano-banana-pro-prompts-20260529.csv  seedance-2-0-prompts-20260324.csv
schemas/: catalog-item.schema.json  generated-prompt.schema.json  model-adapter.schema.json  storyboard.schema.json  video-prompt.schema.json
scripts/: README.md  csv_dedupe.py  csv_inventory.py  find_duplicates.py  inventory_catalog.py  seed_catalog.py  validate_catalog.py
templates/: brand-profile-template.json  brief-intake-template.json  model-adapter-template.json  prompt-card-template.json
tests/: conftest.py  test_adapters.py  test_assembler.py  test_bm25_and_hybrid.py  test_brief.py  test_brief_parsers.py  test_catalog.py  test_cli_check.py  test_compiler.py  test_config.py  test_curation_and_usage.py  test_end_to_end.py  test_gui_settings.py  test_gui_smoke.py  test_ingest.py  test_phase2_video.py  test_phase3_retrieval.py  test_phase4_campaign.py  test_proposer.py  (+6 more)
(+128 files in other folders)
