[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-genius"
version = "0.1.0"
description = "Internal creative prompt workbench for static images and video"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Internal" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
gui = [
    "PySide6>=6.6",
    "python-toon>=0.1.3",
]
embeddings = [
    "sentence-transformers>=2.5",
]
mlx = [
    "mlx-lm>=0.18",
    "huggingface_hub>=0.24",
]
all = [
    "prompt-genius[dev,gui,embeddings,mlx]",
]
# Note: LLM-backed brief parsing uses `claude -p` or `codex exec` subprocesses,
# not a Python SDK. No extra is needed — install those CLIs separately.

[project.scripts]
prompt-genius = "prompt_genius.cli.main:app"
prompt-genius-gui = "prompt_genius.gui.app:main"

[tool.setuptools.packages.find]
include = ["prompt_genius*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.package-data]
prompt_genius = ["py.typed", "gui/assets/*"]
